--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Alain's Blog
 name: Alain's Blog
 description: 
-  This is a blog of someone a passionate about technology who want's to share some of the things he knows
+  This is a blog of someone passionate about technology who wants to share some of the things he knows
   about Application Development, Integration, Cloud, Big Data and Digital Transformation
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "alainpham.github.io" # the base hostname & protocol for your site, e.g. http://example.com
