--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description:
   This is a blog of someone passionate about technology who wants to share some of the things he knows
   about Application Development, Integration, Cloud, Big Data and Digital Transformation
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "alainpham.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://alainpham.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  alainpham
 
 # Build settings
