--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ name: Alain's Tech Blog
 description: 
   This is a blog of someone passionate about technology who wants to share some of the things he knows
   about Application Development, Integration, Cloud, Big Data and Digital Transformation
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "mvsn-ufrn.github.io/" # the subpath of your site, e.g. /blog
 github_username:  alainpham
 
 # jekyll-paginate configuration
